bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(product) AS product, ENC_PT(ratio) AS ratio
  Sort: AS_SORTABLE_BYTES(DIV(xsd:float(monthCount), monthBeforeCount)) DESC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(product))) ASC NULLS FIRST, fetch=10
    Projection: lhs.product AS product, lhs.monthCount AS monthCount, rhs.monthBeforeCount AS monthBeforeCount, DIV(xsd:float(lhs.monthCount), rhs.monthBeforeCount) AS ratio
      Inner Join: lhs.product = rhs.product
        SubqueryAlias: lhs
          Projection: product, <uuid> AS monthCount
            Aggregate: groupBy=[[product AS product]], aggr=[[COUNT(review) AS <uuid>]]
              BasicGraphPattern: projection=[review, product], filters=[EBV(GEQ(ENC_TF(ENC_PT(date)), Union 5:{date_time_type:1,value:63327571200.000000000000000000,offset:})) AND EBV(LT(ENC_TF(ENC_PT(date)), Union 5:{date_time_type:1,value:63329990400.000000000000000000,offset:})) AS EBV(BOOLEAN_AS_TERM(EBV(GEQ(ENC_TF(ENC_PT(date)),ENC_TF(Struct({term_type:2,value:2007-10-10,data_type:http://www.w3.org/2001/XMLSchema#date,language_tag:})))) AND EBV(LT(ENC_TF(ENC_PT(date)),ENC_TF(Struct({term_type:2,value:2007-11-07,data_type:http://www.w3.org/2001/XMLSchema#date,language_tag:}))))))]
                QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product]
                QuadPattern: triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date]
        SubqueryAlias: rhs
          Projection: product, <uuid> AS monthBeforeCount
            Filter: EBV(GT(<uuid>, Union 4:4:0))
              Aggregate: groupBy=[[product AS product]], aggr=[[COUNT(review) AS <uuid>]]
                BasicGraphPattern: projection=[review, product], filters=[EBV(GEQ(ENC_TF(ENC_PT(date)), Union 5:{date_time_type:1,value:63325152000.000000000000000000,offset:})) AND EBV(LT(ENC_TF(ENC_PT(date)), Union 5:{date_time_type:1,value:63327571200.000000000000000000,offset:})) AS EBV(BOOLEAN_AS_TERM(EBV(GEQ(ENC_TF(ENC_PT(date)),ENC_TF(Struct({term_type:2,value:2007-09-12,data_type:http://www.w3.org/2001/XMLSchema#date,language_tag:})))) AND EBV(LT(ENC_TF(ENC_PT(date)),ENC_TF(Struct({term_type:2,value:2007-10-10,data_type:http://www.w3.org/2001/XMLSchema#date,language_tag:}))))))]
                  QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product]
                  QuadPattern: triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date]
