bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q4 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(feature@0) as feature, ENC_PT(priceRatio@3) as priceRatio]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(DIV(withFeaturePrice@1, withoutFeaturePrice@2)) DESC, ENC_SORT(ENC_TF(ENC_PT(feature@0))) ASC], preserve_partitioning=[false], filter=[ENC_SORT(DIV(withFeaturePrice@1, withoutFeaturePrice@2)) IS NULL OR ENC_SORT(DIV(withFeaturePrice@1, withoutFeaturePrice@2)) > {type:4,numeric:1.0916775465011597,bytes:312e30393136373735} OR ENC_SORT(DIV(withFeaturePrice@1, withoutFeaturePrice@2)) = {type:4,numeric:1.0916775465011597,bytes:312e30393136373735} AND (ENC_SORT(ENC_TF(ENC_PT(feature@0))) IS NULL OR ENC_SORT(ENC_TF(ENC_PT(feature@0))) < {type:2,numeric:,bytes:687474703a2f2f777777342e7769776973732e66752d6265726c696e2e64652f62697a65722f6273626d2f7630312f696e7374616e6365732f50726f647563744665617475726531333837})]
    ProjectionExec: expr=[feature@0 as feature, withFeaturePrice@1 as withFeaturePrice, withoutFeaturePrice@2 as withoutFeaturePrice, DIV(withFeaturePrice@1, withoutFeaturePrice@2) as priceRatio]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(feature@0, feature@0)], projection=[feature@0, withFeaturePrice@1, withoutFeaturePrice@3]
        ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withFeaturePrice]
          AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[<uuid>]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[feature@0, price@3]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[feature@1, offer@2]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, feature@2]
                  DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>
                  DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?feature, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
                DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>, object=?product, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>, object=?price, additional_filters=[DynamicFilter [ Generation 2; offer in (<object id range>) ]]
        ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withoutFeaturePrice]
          AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[<uuid>]
            HashJoinExec: mode=CollectLeft, join_type=LeftAnti, on=[(feature@0, __inner__feature@1), (product@1, __inner__product@0)], projection=[feature@0, price@2]
              CrossJoinExec
                AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p@0, p@0)], projection=[feature@2]
                    DataSourceExec: [GPOS] subject=?p, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>
                    DataSourceExec: [GPOS] subject=?p, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?feature, additional_filters=[DynamicFilter [ Generation 2; p in (<object id range>) ]]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, price@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                    DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>
                    DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>, object=?product, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
                  DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>, object=?price, additional_filters=[DynamicFilter [ Generation 2; offer in (<object id range>) ]]
              ProjectionExec: expr=[product@0 as __inner__product, feature@1 as __inner__feature]
                DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?feature
