bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q4 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[feature@0 as feature, ENC_PT(priceRatio@3) as priceRatio]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(DIV(withFeaturePrice@1, withoutFeaturePrice@2)) DESC, AS_SORTABLE_BYTES(ENC_TF(feature@0)) ASC], preserve_partitioning=[false]
    DecodeObjectIdsExec: projections=[decode(feature) as feature, withFeaturePrice, withoutFeaturePrice, priceRatio]
      ProjectionExec: expr=[feature@0 as feature, withFeaturePrice@1 as withFeaturePrice, withoutFeaturePrice@2 as withoutFeaturePrice, DIV(withFeaturePrice@1, withoutFeaturePrice@2) as priceRatio]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(feature@0, feature@0)], projection=[feature@0, withFeaturePrice@1, withoutFeaturePrice@3]
          ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withFeaturePrice]
            AggregateExec: mode=Single, gby=[feature@1 as feature], aggr=[<uuid>]
              DecodeObjectIdsExec: projections=[product, feature, offer, decode(price) as price]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@2, offer@0)], projection=[product@0, feature@1, offer@2, price@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, feature@1, offer@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, feature@2]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 47, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 47 AND 47 <= object_max@6, required_guarantees=[object in (47), predicate in (1609)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product, object@3 as feature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2, required_guarantees=[predicate in (14913)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23401 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23401 AND 23401 <= predicate_max@2, required_guarantees=[predicate in (23401)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23403 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23403 AND 23403 <= predicate_max@2, required_guarantees=[predicate in (23403)]
          ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withoutFeaturePrice]
            AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[<uuid>]
              DecodeObjectIdsExec: projections=[feature, product, offer, decode(price) as price]
                HashJoinExec: mode=CollectLeft, join_type=LeftAnti, on=[(feature@0, __inner__feature@1), (product@1, __inner__product@0)]
                  CrossJoinExec
                    AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p@0, p@0)], projection=[feature@2]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?p <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as p], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 47, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 47 AND 47 <= object_max@6, required_guarantees=[object in (47), predicate in (1609)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?p <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as p, object@3 as feature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2, required_guarantees=[predicate in (14913)]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, offer@1, price@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 47, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 47 AND 47 <= object_max@6, required_guarantees=[object in (47), predicate in (1609)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23401 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23401 AND 23401 <= predicate_max@2, required_guarantees=[predicate in (23401)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23403 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23403 AND 23403 <= predicate_max@2, required_guarantees=[predicate in (23403)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as __inner__product, object@3 as __inner__feature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2, required_guarantees=[predicate in (14913)]
