bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q4 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[feature@0 as feature, ENC_PT(priceRatio@3) as priceRatio]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(DIV(withFeaturePrice@1, withoutFeaturePrice@2)) DESC, AS_SORTABLE_BYTES(ENC_TF(feature@0)) ASC], preserve_partitioning=[false]
    ProjectionExec: expr=[feature@0 as feature, withFeaturePrice@1 as withFeaturePrice, withoutFeaturePrice@2 as withoutFeaturePrice, DIV(withFeaturePrice@1, withoutFeaturePrice@2) as priceRatio]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(feature@0, feature@0)], projection=[feature@0, withFeaturePrice@1, withoutFeaturePrice@3]
        ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withFeaturePrice]
          AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[AVG(xsd:float(xsd:string(ENC_TF(price)))) as <uuid>]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[feature@0, price@3]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[feature@1, offer@2]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, feature@2]
                  ProjectionExec: expr=[subject@0 as product]
                    FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48,data_type:,language_tag:}, projection=[subject@1]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www.w3.org/1999/02/22-rdf-syntax-ns#type AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL AND get_field(object@3, term_type) = 0 AND get_field(object@3, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48 AND get_field(object@3, data_type) IS NULL AND get_field(object@3, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
                  ProjectionExec: expr=[subject@0 as product, object@1 as feature]
                    FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:}, projection=[subject@1, object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
                ProjectionExec: expr=[subject@0 as offer, object@1 as product]
                  FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:}, projection=[subject@1, object@3]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
              ProjectionExec: expr=[subject@0 as offer, object@1 as price]
                FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:}, projection=[subject@1, object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
        ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withoutFeaturePrice]
          AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[AVG(xsd:float(xsd:string(ENC_TF(price)))) as <uuid>]
            HashJoinExec: mode=CollectLeft, join_type=LeftAnti, on=[(feature@0, __inner__feature@1), (product@1, __inner__product@0)], projection=[feature@0, price@2]
              CrossJoinExec
                AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p@0, p@0)], projection=[feature@2]
                    ProjectionExec: expr=[subject@0 as p]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48,data_type:,language_tag:}, projection=[subject@1]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?p <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www.w3.org/1999/02/22-rdf-syntax-ns#type AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL AND get_field(object@3, term_type) = 0 AND get_field(object@3, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48 AND get_field(object@3, data_type) IS NULL AND get_field(object@3, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
                    ProjectionExec: expr=[subject@0 as p, object@1 as feature]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:}, projection=[subject@1, object@3]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?p <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, price@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                    ProjectionExec: expr=[subject@0 as product]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48,data_type:,language_tag:}, projection=[subject@1]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www.w3.org/1999/02/22-rdf-syntax-ns#type AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL AND get_field(object@3, term_type) = 0 AND get_field(object@3, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48 AND get_field(object@3, data_type) IS NULL AND get_field(object@3, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
                    ProjectionExec: expr=[subject@0 as offer, object@1 as product]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:}, projection=[subject@1, object@3]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
                  ProjectionExec: expr=[subject@0 as offer, object@1 as price]
                    FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:}, projection=[subject@1, object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
              ProjectionExec: expr=[subject@0 as __inner__product, object@1 as __inner__feature]
                FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature,data_type:,language_tag:}, projection=[subject@1, object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND get_field(predicate@2, term_type) = 0 AND get_field(predicate@2, value) = http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature AND get_field(predicate@2, data_type) IS NULL AND get_field(predicate@2, language_tag) IS NULL, pruning_predicate=graph_null_count@0 > 0, required_guarantees=[]
